# Dll_lib_cmake_template

./: CMakeLists.txt  README.md
cmake/: CheckDirectory.cmake  CheckVariable.cmake  FindProgramRequired.cmake  ReportVariable.cmake
source/application/: CMakeLists.txt
source/application/include/application/: c_dll_wrapper.h
source/application/src/: DLLMain.cpp  c_dll_wrapper.cpp  simple_app.cpp
source/application/tests/: CMakeLists.txt
source/application/tests/src/: app_tests.cpp  main.cpp
